# farmers-ai

./: README.md  app.py  pyproject.toml
